# databudgie

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  config.sample.yml  config.yml  pyproject.toml  ruff.toml
.circleci/: config.yml
.github/workflows/: build.yml  publish.yml  release.yml
docs/: Makefile  pyproject.toml  requirements.txt
docs/source/: api.md  backup.md  conf.py  index.md  restore.md
docs/source/config/: backup_restore.md  ddl.md  default_and_file_types.md  index.md  interpolation.md  manifest.md  precedence.md  table.md
src/databudgie/: __init__.py  __main__.py  api.py  backup.py  compat.py  compression.py  config.py  match.py  output.py  restore.py  s3.py  storage.py  table_op.py  utils.py
src/databudgie/adapter/: __init__.py  base.py  fallback.py  postgres.py
src/databudgie/cli/: __init__.py  backup.py  base.py  commands.py  config.py  restore.py  setup.py
src/databudgie/config/: __init__.py  models.py
src/databudgie/etl/: backup.py  base.py  restore.py
src/databudgie/manifest/: __init__.py  manager.py  mixins.py  sqlalchemy.py
tests/: conftest.py  test_api.py  test_backup.py  test_config.py  test_ddl.py  test_follow_foreign_keys.py  test_manifest.py  test_match.py  test_restore.py  test_root_location.py  test_sequences.py  test_skip_if_exists.py  test_storage.py  test_utils.py  utils.py
tests/adapter/: test_fallback.py  test_postgres.py
tests/cli/: test_base.py  test_commands.py  test_config.py
tests/databudgie/: conftest.py  test_backup.py  test_config.py  test_example.py  test_follow_foreign_keys.py  test_restore.py  test_sequences.py
tests/databudgie/adapter/: test_fallback.py  test_postgres.py
tests/databudgie/config/: test_config_models.py
tests/databudgie/ddl/: config.backup.yml  config.restore.yml  models.py  test_ddl.py
tests/databudgie/manifest/: test_manifest.py
tests/mockmodels/: __init__.py  factories.py  models.py
