[project]
name = "databudgie"
version = "2.8.6"
description = "Ergonomic and flexible tool for database backup and restore"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Andrew Sosa", email = "andrewso@known.is" }, { name = "Dan Cardin", email = "ddcardin@gmail.com" }]
keywords = ["sqlalchemy", "postgres", "database", "etl", "s3"]
classifiers = ["License :: OSI Approved :: MIT License", "Topic :: System :: Archiving :: Backup"]
requires-python = ">=3.8,<4"
dependencies = [
    "rich",
    "configly[yaml]>=1.0.0",
    "sqlalchemy>=1.3",
    "strapp[click,sqlalchemy]>=0.2.7",
    "click>=7.0.0",
    "typing-extensions>=3.10.0; python_version<'3.8'",
    "importlib-metadata; python_version<'3.8'",
]

[project.optional-dependencies]
s3 = ["boto3"]
psycopg2 = ["psycopg2>=2.7"]
psycopg2-binary = ["psycopg2-binary>=2.7"]
dev = [
    "boto3==1.34.100",
    "black==22.3.0",
    "boto3-stubs[s3]>=1.18.38",
    "coverage>=5",
    "freezegun",
    "mypy>=1.14",
    "pytest>=6.2.4",
    "pytest-mock-resources[docker]>=2.1.10",
    "responses>=0.10.9",
    "ruff==0.0.254",
    "types-freezegun>=0.1.3",
    "types-requests>=0.1.11",
    "faker>=8.12.1",
    "moto[s3]>=5.0.0",
    "sqlalchemy-model-factory>=0.4.5",
    "types-click>=7.1.5",
]

[project.scripts]
databudgie = "databudgie.__main__:run"

[project.urls]
Repository = "https://github.com/schireson/databudgie"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "boto3==1.34.100",
    "black==22.3.0",
    "boto3-stubs[s3]>=1.18.38",
    "coverage>=5",
    "freezegun",
    "mypy>=0.991",
    "pytest>=6.2.4",
    "pytest-mock-resources[docker]>=2.1.10",
    "responses>=0.10.9",
    "ruff==0.0.254",
    "types-freezegun>=0.1.3",
    "types-requests>=0.1.11",
    "faker>=8.12.1",
    "moto[s3]>=5.0.0",
    "sqlalchemy-model-factory>=0.4.5",
    "types-click>=7.1.5",
]

[tool.black]
line_length = 120

[tool.isort]
profile = 'black'
known_first_party = 'databudgie,tests'
line_length = 120
float_to_top = true
order_by_type = false
use_parentheses = true

[tool.mypy]
strict_optional = true
ignore_missing_imports = true
warn_unused_ignores = true
incremental = true

[[tool.mypy.overrides]]
module = 'tests.mockmodels.*'
ignore_errors = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "if __name__ == .__main__.:"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.pydocstyle]
ignore = 'D1,D200,D202,D203,D204,D213,D406,D407,D413'
match_dir = '^[^\.{]((?!igrations).)*'

[tool.pytest.ini_options]
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS"
addopts = "--doctest-modules -vv --ff --strict-markers"
norecursedirs = ".* build dist *.egg migrations bin"
filterwarnings = [
    "ignore::sqlalchemy.exc.SAWarning",
    "ignore::sqlalchemy.exc.SADeprecationWarning",
    "ignore:ssl.PROTOCOL_TLS is deprecated:DeprecationWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/databudgie"]
