[project]
name = "databudgie"
version = "2.9.1"
description = "Ergonomic and flexible tool for database backup and restore"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Andrew Sosa", email = "andrewso@known.is" }, { name = "Dan Cardin", email = "ddcardin@gmail.com" }]
keywords = ["sqlalchemy", "postgres", "database", "etl", "s3"]
classifiers = ["License :: OSI Approved :: MIT License", "Topic :: System :: Archiving :: Backup"]
requires-python = ">=3.8,<4"
dependencies = [
    "rich",
    "configly[yaml]>=1.0.0",
    "sqlalchemy>=1.3",
    "strapp[click,sqlalchemy]>=0.2.7",
    "click>=7.0.0",
    "typing-extensions>=3.10.0; python_version<'3.8'",
    "importlib-metadata; python_version<'3.8'",
]

[project.optional-dependencies]
s3 = ["boto3"]
postgres = ["psycopg[binary]>=3.0"]

[project.scripts]
databudgie = "databudgie.__main__:run"

[project.urls]
Repository = "https://github.com/schireson/databudgie"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "boto3",
    "boto3-stubs[s3]",
    "coverage>=5",
    "freezegun",
    "mypy>=0.991",
    "pytest>=6.2.4",
    "pytest-mock-resources[docker]>=2.1.10",
    "responses>=0.10.9",
    "ruff>=0.9",
    "types-freezegun>=0.1.3",
    "types-requests>=0.1.11",
    "faker>=8.12.1",
    "moto[s3]>=5.0.0",
    "sqlalchemy-model-factory>=0.4.5",
    "types-click>=7.1.5",
]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["C", "D", "E", "F", "I", "N", "Q", "RET", "RUF", "S", "T", "UP", "YTT"]
ignore = ["C901", "E501", "S101", "D1", "D203", "D213", "D406", "D407", "D408", "D409", "D413"]
extend-ignore = ["D1", "D203", "D204", "D213", "D215", "D400", "D404", "D406", "D407", "D408", "D409", "D413"]

[tool.ruff.lint.isort]
order-by-type = false

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201", "D", "S", "N801", "N802", 'N806']

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
strict_optional = true
ignore_missing_imports = true
warn_unused_ignores = true
incremental = true

[[tool.mypy.overrides]]
module = 'tests.mockmodels.*'
ignore_errors = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "if __name__ == .__main__.:"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.pytest.ini_options]
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS"
addopts = "--doctest-modules -vv --ff --strict-markers"
norecursedirs = ".* build dist *.egg migrations bin"
filterwarnings = [
    "ignore::sqlalchemy.exc.SAWarning",
    "ignore::sqlalchemy.exc.SADeprecationWarning",
    "ignore:ssl.PROTOCOL_TLS is deprecated:DeprecationWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/databudgie"]
