[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = [
  "Andrew Sosa <andrewso@known.is>",
  "Dan Cardin <ddcardin@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.9"

furo = "^2024.1.29"
linkify-it-py = "*"
myst-parser = {version = "^2.0.0", extras = ["linkify"]}
sphinx = "~7.1.2"
sphinx-autoapi = "^3.0.0"
sphinx-autobuild = "^2024.2.4"
sphinx-autodoc-typehints = "^2.0.0"
sphinx-copybutton = "*"
sphinx-pyproject = "~0.3.0"

[tool.poetry.dev-dependencies]
sphinx-autobuild = "*"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

